# codetest

./: .ghci  Main.hs  Makefile  README.md  cabal.config  codetest.cabal  learnyou.cabal
src/: AcceptanceTest.hs  Common.hs  Main.hs  PeopleParsing.hs  Person.hs  Test.hs
src/Codetest/: Main.hs
src/Person/: Format.hs  Parse.hs
src/Test/: Acceptance.hs  Format.hs  Helper.hs  Main.hs  Parse.hs  Sort.hs  Sorting.hs
